--- a/Atm.Web/Components/Layout/NavMenu.razor
+++ b/Atm.Web/Components/Layout/NavMenu.razor
@@ -16,7 +16,7 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/create-account">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Create Account
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Create User
             </NavLink>
         </div>
 
